<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_70">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewNameHero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/mol"
            android:text="@string/name_hero_text"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewHero" />

        <ImageView
            android:id="@+id/imageViewHero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_hero_text"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNameHero">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/textViewTitlePrimaryAttr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:text="@string/primary_attr_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewPrimaryAttr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/textViewTitleAgi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:text="@string/agi_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewAgi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/textViewTitleStr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:text="@string/str_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewStr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="0.5"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/textViewTitleInt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:text="@string/int_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewInt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/textViewTitleSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:text="@string/speed_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/textViewTitleRange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:text="@string/range_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewRange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/textViewTitleHealth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:text="@string/health_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewHealth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/textViewTitleMana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:text="@string/mana_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewMana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/textViewTitleBaseAttack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:text="@string/base_attack_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewBaseAttack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mol"
                    android:padding="2dp"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>